--- a/Assignment_13.ipynb
+++ b/Assignment_13.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d637eedc",
+   "id": "f9e2a814",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d521a45",
+   "id": "5252d2ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d68f52e7",
+   "id": "725d89e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8bfe5db8",
+   "id": "830f7113",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8117745b",
+   "id": "692f1c5c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7565869",
+   "id": "35710a3b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "327d1da6",
+   "id": "e56cc1ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "571c310e",
+   "id": "30416887",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d972cf17",
+   "id": "0a0747c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24703528",
+   "id": "7a15c6db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "105f4952",
+   "id": "c6fdb158",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e268e05c",
+   "id": "6485d5e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,8 +135,10 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5a545f1b",
-   "metadata": {},
+   "id": "a36158e0",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -170,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ae22762",
+   "id": "4593974c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9a22e1d",
+   "id": "33444254",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f9d04c03",
+   "id": "71106974",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eec7cabe",
+   "id": "b8f294f0",
    "metadata": {},
    "outputs": [],
    "source": []
