--- a/Assignment_15.ipynb
+++ b/Assignment_15.ipynb
@@ -3,173 +3,240 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "661faf6a",
+   "id": "af50263a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "1. What does RGBA stand for?"
+    "1.How many seconds are in an hour? Use the interactive interpreter as a calculator and multiply the number of seconds in a minute (60) by the number of minutes in an hour (also 60)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "a14755ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3600\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(60*60)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eea21cdf",
+   "id": "782c30e6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Ans: RGBA is a four-channel format containing data for Red, Green, Blue, and an Alpha value. Where Alpha Represents the Opacity. Each value is a floating point number between 0.0 and 1.0. For example, the tuple (1, 0, 0, 1) represents an opaque red, while (0, 1, 0, 0.5) represents a half transparent green."
+    "2. Assign the result from the previous task (seconds in an hour) to a variable called seconds_per_hour."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "cbac8e93",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3600\n"
+     ]
+    }
+   ],
+   "source": [
+    "seconds_per_hour = 60*60\n",
+    "print(seconds_per_hour)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08cb7e28",
+   "id": "8c36c940",
    "metadata": {},
    "outputs": [],
    "source": [
-    "2. From the Pillow module, how do you get the RGBA value of any images?"
+    "3. How many seconds do you think there are in a day? Make use of the variables seconds per hour and minutes per hour."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "9d3fe425",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "86400\n"
+     ]
+    }
+   ],
+   "source": [
+    "minutes_per_hour = 60\n",
+    "print(seconds_per_hour*24)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d5105b5",
+   "id": "d1318eef",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Ans: ImageColor.getcolor() gives rgba value of any image"
+    "4. Calculate seconds per day again, but this time save the result in a variable called seconds_per_day"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "fbc93911",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "86400\n"
+     ]
+    }
+   ],
+   "source": [
+    "seconds_per_day = 24*60*60\n",
+    "print(seconds_per_day)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5df8853c",
+   "id": "7215ac17",
    "metadata": {},
    "outputs": [],
    "source": [
-    "3. What is a box tuple, and how does it work?"
+    "5. Divide seconds_per_day by seconds_per_hour. Use floating-point (/) division."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "eb4e501a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(seconds_per_day/seconds_per_hour)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f91d04c",
+   "id": "33ba3e73",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Ans: A box tuple is a tuple value of four integers: the left-edge x-coordinate, the top-edge y-coordinate,the width, and the height, respectively."
+    "6. Divide seconds_per_day by seconds_per_hour, using integer (//) division. Did this number agree with the floating-point value from the previous question, aside from the final .0?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "2618872f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24 -> yes this values agree with the floating point value from the previous question\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(seconds_per_day//seconds_per_hour, end='')\n",
+    "print(' -> yes this values agree with the floating point value from the previous question')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17c086ae",
+   "id": "5c8f3984",
    "metadata": {},
    "outputs": [],
    "source": [
-    "4. Use your image and load in notebook then, How can you find out the width and height of an Image object?"
+    "7. Write a generator, genPrimes, that returns the sequence of prime numbers on successive calls to its next() method: 2, 3, 5, 7, 11, ...\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "bcbc6212",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "11\n",
+      "13\n",
+      "17\n",
+      "19\n",
+      "23\n",
+      "25\n",
+      "29\n",
+      "31\n",
+      "35\n",
+      "37\n",
+      "41\n",
+      "43\n",
+      "47\n",
+      "49\n",
+      "53\n",
+      "55\n"
+     ]
+    }
+   ],
+   "source": [
+    "def genPrimes():\n",
+    "    n = 0\n",
+    "    while True:\n",
+    "        if n == 2 or n == 3 :\n",
+    "            yield n\n",
+    "        elif ((n-1)%6 == 0 or (n+1)%6 == 0) and n !=1:\n",
+    "            yield n\n",
+    "        n = n+1\n",
+    "        \n",
+    "output = genPrimes()\n",
+    "for ele in range(20):\n",
+    "    print(next(output))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "122215e2",
+   "id": "ec263f23",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#Example Program\n",
-    "from PIL import Image\n",
-    "pic = Image.open('Pic.jpg')\n",
-    "print(f'Width, Height -> {pic.size}') # Approach 1\n",
-    "print(f'Width, Height -> {pic.width},{pic.height}') # Approach 2\n",
-    "width,height = pic.size\n",
-    "print(f'Width, Height -> {width},{height}') # Approach 3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a9530daf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "5. What method would you call to get Image object for a 100×100 image, excluding the lower-left quarter of it?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1fb98ab5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from PIL import Image\n",
-    "img = Image.open('Pic.jpg')\n",
-    "new_img = img.crop((0,50,50,50))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "911da142",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "6. After making changes to an Image object, how could you save it as an image file?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8e6b9274",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Example Program\n",
-    "from PIL import Image\n",
-    "pic = Image.open('pic.jpg')\n",
-    "pic.save('pic2.jpg')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3082e9f6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "7. What module contains Pillow’s shape-drawing code?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1227b225",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Ans: Pillows ImageDraw module contains Shape drawing methods. The 'ImageDraw' module provides simple 2D graphics support for Image Object. Generally, we use this module to create new images, annotate or retouch existing images and to generate graphics on the fly for web use. The graphics commands support the drawing of shapes and annotation of text."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4b8885be",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "8. Image objects do not have drawing methods. What kind of object does? How do you get this kind of object?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0cad1c3e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Ans: ImageDraw objects have shape-drawing methods such as point(), line(), or rectangle().They are returned by passing the Image object to the ImageDraw.Draw() function."
-   ]
+   "source": []
   }
  ],
  "metadata": {
